Checkin of the latest changes to the event / calendaring system.  Events now have timezones, geocoding, all_day_events are handled properly as far as storage and display in lists and grids, multi day events are supported / displayed in day, week, month list, month grid formats correctly, locations support state and country pulldowns to help normalize event location data for later searching (with 'other state' support store back into 'state' field), my calendar support with default to grid view with calendar nav to get to day, week, month list views.  Group calendar, invite (notify system), and attendee message by host are not currently supported in this checkin. have been made visible

--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -195,3 +195,11 @@ table.create td {
 table.create td input {
   margin-bottom: 0.5em;
 }
+
+#google_map { 
+              width: 300px;
+              height: 300px;
+              float: right; 
+              border: 1px solid #ccc;
+              margin: 5px 0 20px 20px; 
+}
